Centers post list tiles and fixes horizontal image size for posts on mobile

--- a/src/components/layout/Layout/Layout.module.scss
+++ b/src/components/layout/Layout/Layout.module.scss
@@ -6,7 +6,7 @@ $bc: black; // "background-color"
 .layout {
   background-color: $bc;
   color: $fc;
-  min-height: 100vw;
-  // border: 0.2rem solid whitesmoke;
-  // padding: 0.5rem 1rem;
+  max-width: 100vw;
+  padding: 0px;
+  margin: 0px;
 }
